# rps

./: .gitignore  CLAUDE.md  CLOUDINARY_SETUP.md  FIREBASE_SETUP.md  QUICKSTART.md  README.md  pubspec.yaml
.github/workflows/: deploy-backend.yml
android/: build.gradle.kts  key.properties.example
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/rps/: MainActivity.kt
android/app/src/main/kotlin/com/picstudios/app/: MainActivity.kt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  r2.py  schemas.py
backend/app/routers/: events.py  legal.py
backend/app/static/: privacy.html
backend/scripts/: seed.py
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: event_model.dart  photo_item.dart
lib/screens/: code_entry_screen.dart  gallery_screen.dart  photo_viewer_screen.dart
lib/services/: ads_service.dart  api_service.dart  cloudinary_service.dart  download_service.dart  firebase_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
tools/: generate_icon.py
web/: index.html
windows/runner/: Runner.rc
